# menix

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  Cargo.toml  Kconfig  LICENSE  Makefile  README.md  REUSE.toml  build.rs  meson.build  meson.options  meson_options.txt  rust-toolchain.toml
arch/x86/: CMakeLists.txt  arch.c  error.c  io.c  linker.ld  pci.c  tty.c  vga.c  x86.ld
arch/x86/boot/: arch.c  boot.s  entry.s  gdt.c  gdt.s  idt.c  idt.s  interrupts.s
arch/x86/include/: arch_bits.h  gdt.h  idt.h  interrupts.h  multiboot.h  tss.h  vga.h
doc/: book.toml  (+4 more)
kernel/: CMakeLists.txt  Cargo.toml  Kconfig  build.rs  kernel.ld  main.c  main.rs  meson.build  module.c  syscall_table.c
kernel/.cargo/: config.toml
kernel/arch/: mod.rs
kernel/arch/riscv64/: CMakeLists.txt  riscv64.ld
kernel/arch/x86/: CMakeLists.txt  arch.c  arch.s  error.c  interrupts.c  interrupts.s  linker.ld  pm.c  serial.c  syscall.s  syscall_handler.s  vga.c  vm.c  x86.ld
kernel/arch/x86_64/: CMakeLists.txt  Kconfig  asm.rs  consts.rs  cpuid.rs  defs.h  elf.rs  gdt.c  gdt.h  gdt.rs  idt.c  idt.rs  mem.c  meson.build  mmu.c  mod.rs  serial.c  smp.c  smp.h  sys.c  trampoline.S  tss.h  usercopy.c  x86_64.json  x86_64.ld
kernel/boot/: CMakeLists.txt  Kconfig  cmdline.c  init.c  initgraph.c  kernel.ld  limine.h  limine.ld  limine.rs  limine_entry.c  main.c  meson.build  mod.rs
kernel/boot/boot_limine/: CMakeLists.txt  limine_entry.c
kernel/boot/boot_mb2/: CMakeLists.txt
kernel/boot/boot_protocol_limine/: CMakeLists.txt  limine_entry.c
kernel/boot/limine/: entry.c  limine.h  meson.build
kernel/core/: console.c  irq.c  meson.build  panic.c  percpu.c  print.c  sched.c  spin.c
kernel/crates/initgraph/: Cargo.toml
kernel/crates/initgraph_proc/: Cargo.toml
kernel/crates/kernel_proc/: Cargo.toml
kernel/drivers/: meson.build  module.ld
kernel/drv/: CMakeLists.txt  driver.c  module.c
kernel/drv/acpi/: CMakeLists.txt  hpet.c  madt.c  mcfg.c  rsdt.c
kernel/drv/gpu/: CMakeLists.txt
kernel/drv/misc/: CMakeLists.txt
kernel/drv/net/: CMakeLists.txt
kernel/drv/pci/: CMakeLists.txt  pci.c  pci_register.c
kernel/drv/spi/: CMakeLists.txt
kernel/drv/usb/: CMakeLists.txt
kernel/fs/: CMakeLists.txt  devtmpfs.c  fd.c  handle.c  tmpfs.c  ustar.c  vfs.c
kernel/generic/: irq.c  mem.c  meson.build  mmu.c  slab.c
kernel/gpu/: CMakeLists.txt  fb.c
kernel/include/: stdarg.h  stdatomic.h  stddef.h  stdint.h  string.h
kernel/include/kernel/: assert.h  cmdline.h  common.h  compiler.h  console.h  elf.h  ident.h  init.h  irq.h  list.h  mem.h  mmu.h  mutex.h  object.h  panic.h  percpu.h  print.h  sched.h  spin.h  syscalls.h  types.h  uio.h  usercopy.h  vector.h
kernel/include/menix/: common.h  config.h  device.h  driver.h  keyboard.h  module.h  serial.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  usb.h
kernel/init/: main.c
kernel/init/limine/: entry.c
kernel/io/: CMakeLists.txt  terminal.c
kernel/klibc/: CMakeLists.txt  errno.c  log.c  meson.build  stdio.c  stdlib.c  string.c
kernel/lib/: kerror.c  stdio.c  stdlib.c  string.c
kernel/link/: x86_64.ld
kernel/mem/: Kconfig  init.c  meson.build  paging.c  pmm.c  pt.c  slab.c
kernel/memory/: CMakeLists.txt  alloc.c  pm.c  slab.c  vm.c
kernel/menix/: kernel.c
kernel/misc/: CMakeLists.txt
kernel/mm/: init.c  meson.build
kernel/mod/: CMakeLists.txt  module.c
kernel/mod/example/: CMakeLists.txt
kernel/proc/: meson.build
kernel/proc/sched/: core.c  meson.build
kernel/sch/: core.c
kernel/sched/: core.c
kernel/src/: build.rs  clock.rs  cmdline.rs  fbcon.rs  init.rs  lib.rs  log.rs  macros.rs  main.rs  menix.rs  module.rs  panic.rs  percpu.rs  system.rs
kernel/src/arch/: core.rs  exec.rs  irq.rs  memory.rs  mod.rs  platform.rs  sched.rs  virt.rs
kernel/src/boot/: entry.rs  init.rs  limine.ld  limine.rs  mod.rs
kernel/src/device/: console.rs  fbcon.rs  memfiles.rs  mod.rs
kernel/src/firmware/: acpi.rs  fdt.rs
kernel/src/fs/: fd.rs  handle.rs  mod.rs  vfs.rs
kernel/src/generic/: clock.rs  cmdline.rs  cpu.rs  elf.rs  errno.rs  error.rs  fbcon.rs  init.rs  log.rs  memory.rs  misc.rs  mod.rs  module.rs  panic.rs  percpu.rs  phys.rs  process.rs  resource.rs  schedule.rs  slab.rs  syscall.rs  task.rs  thread.rs  user.rs  util.rs  virt.rs
kernel/src/irq/: lock.rs  mod.rs  msi.rs
kernel/src/memory/: cache.rs  iovec.rs  mod.rs  pm.rs  pmm.rs  slab.rs  user.rs  view.rs  vm.rs
kernel/src/misc/: bitmap.rs  kernel.rs  log.rs  mod.rs  panic.rs
kernel/src/posix/: errno.rs  resource.rs  utsname.rs
kernel/src/process/: mod.rs  signal.rs  task.rs
kernel/src/sched/: mod.rs
kernel/sys/: CMakeLists.txt  acpi.c  console.c  do_exec.c  do_fs.c  do_mmap.c  do_mod.c  do_null.c  do_proc.c  do_shutdown.c  do_uname.c  do_vm.c  fbcon.c  irq.c  klibc.c  kprintf.c  log.c  meson.build  panic.c  percpu.c  spin.c  syscall.c  syscall_handler.c  syscall_table.c  syscalls.c
kernel/syscall/: CMakeLists.txt  archctl.c  chdir.c  close.c  do_mod.c  do_uname.c  execve.c  exit.c  faccessat.c  fchdir.c  fork.c  fstat.c  futex_wait.c  futex_wake.c  getcwd.c  getpid.c  gettid.c  ioctl.c  kill.c  memory.c  mkdirat.c  mmap.c  mprotect.c  munmap.c  open.c  openat.c  pid.c  process.c  read.c  readtimer.c  savetls.c  seek.c  sigsuspend.c  socket.c  stubs.c  syscall.c  system.c  uname.c  vfs.c  waitpid.c  (+1 more)
kernel/system/: CMakeLists.txt  acpi.c  device.c  elf.c  fw.c  interrupts.c  isr.c  logger.c  meson.build  module.c  terminal.c
kernel/thread/: CMakeLists.txt  elf.c  mutex.c  process.c  scheduler.c  spin.c  thread.c
kernel/toolchain/: util.cmake  x86_64.json  x86_64.ld
kernel/tree/: CMakeLists.txt  node.c
kernel/util/: CMakeLists.txt  builtin_font.c  cmd.c  meson.build  rc.c  self.c  spin.c
kernel/video/: CMakeLists.txt  bmp.c  fb.c  fb_defaults.c  fbcon.c
modules/: CMakeLists.txt
modules/block/: CMakeLists.txt
modules/drv/: CMakeLists.txt
modules/example/: CMakeLists.txt  Cargo.toml  main.c
modules/gpu/: CMakeLists.txt
servers/posix/: main.c  meson.build
tools/packager/: Cargo.toml
(+1046 files in other folders)
