[workspace]
resolver = "3"
members = ["kernel", "kernel_proc", "bindings/*", "drivers/*/*"]

[workspace.dependencies]
menix = { path = "kernel" }

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
strip = false

[profile.release]
panic = "abort"
opt-level = 3
debug = false
overflow-checks = false
strip = true
