[workspace]
resolver = "3"
members = ["kernel", "bindings/*", "drivers/*"]

[workspace.dependencies]
menix = { path = "kernel" }

[profile.dev]
panic = "abort"
opt-level = 1   # If this is 0, the stack overflows almost instantly.
debug = true
strip = false

[profile.release]
panic = "abort"
opt-level = 1
debug = true
overflow-checks = false
strip = false
