option(
	'headers_only',
	type: 'boolean',
	value: false,
	description: 'Only install kernel headers',
)

# Boot

option(
	'boot_protocol',
	type: 'combo',
	choices: ['limine', 'uefi'],
	value: 'limine',
	description: 'The protocol to use for booting',
)

option(
	'example',
	type: 'combo',
	choices: ['y', 'm', 'n'],
	value: 'm',
	description: 'An example module',
)
