[package]
name = "menix"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
bitflags = "2.9.0"
cfg-if = "1.0.0"
seq-macro = "0.3.6"
bytemuck = { version = "1.22.0", features = ["derive"] }
num-traits = { version = "0.2.19", default-features = false }
limine = { version = "0.4.0", optional = true }
uacpi-sys = { path = "../bindings/uacpi", optional = true }
flanterm-sys = { path = "../bindings/flanterm" }

[features]
default = ["boot_limine", "all"]
all = ["acpi", "openfw", "pci"]
# Boot protocols
boot_limine = ["dep:limine"]
# Firmware
acpi = ["dep:uacpi-sys", "pci"]
openfw = []
# Bus
pci = []
