[package]
name = "menix"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
initgraph = { path = "crates/initgraph" }
kernel_proc = { path = "crates/kernel_proc" }

uacpi-sys = { path = "../bindings/uacpi" }
flanterm-sys = { path = "../bindings/flanterm" }

bitflags = "2.10.0"
cfg-if = "1.0.4"
seq-macro = "0.3.6"
bytemuck = { version = "1.24.0", features = ["derive", "min_const_generics"] }
num-traits = { version = "0.2.19", default-features = false }
limine = { version = "0.5.0", optional = true }
rustc-demangle = { version = "0.1.26" }
intrusive-collections = { version = "0.9.7", features = ["nightly"] }

[features]
default = ["acpi", "boot_limine"]

# Boot protocols
boot_limine = ["dep:limine"]
boot_uefi = []

# System configurations
acpi = []
