[package]
name = "packager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["derive"] }
decompress = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
toml = "0.8.19"
